Fix twitter feed overflow to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,10 @@ p {
     color: white;
 }
 
+.twitter-timeline {
+    height: 40px;
+}
+
 footer {
         background-color: #031d44;
         
